en: adds ui module
